--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
               startWithAudioMuted: true,
               disableKick: true,
             remoteVideoMenu: { disableKick: true },
-            disableRemoteMute: true
+            disableRemoteMute: true,
+            subject: "4-2",
+            disableDeepLinking: true
 
             },
             interfaceConfigOverwrite: {
